// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alexa TDN should exit when canceled from intro 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "text": "Auf Wiedersehen.",
      "type": "PlainText",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should flow into Information and back 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle LaunchRequest 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-intro.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-intro.1x.png",
      },
      "text": "Sage \\"Informationen\\" für Allgemeine Informationen oder \\"Programm\\" für eine Programmübersicht.",
      "title": "Willkommen zum 35. Tag der Niedersachsen im Jahr 2017",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Willkommen zum 35. \\"Tag der Niedersachsen\\" im Jahr 2017. <break /> Ich habe allgemeine Informationen oder eine Programmübersicht.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-intro.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-intro.1x.png",
      },
      "text": "Sage \\"Informationen\\" für Allgemeine Informationen oder \\"Programm\\" für eine Programmübersicht.",
      "title": "Willkommen zum 35. Tag der Niedersachsen im Jahr 2017",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Willkommen zum 35. \\"Tag der Niedersachsen\\" im Jahr 2017. <break /> Ich habe allgemeine Informationen oder eine Programmübersicht.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 2`] = `
Object {
  "response": Object {
    "directives": Array [
      Object {
        "slotToElicit": "Tag",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen findet statt von Freitag den 1. bis Sonntag den 3. September.</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "PROGRAM",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 3`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-sunday.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-sunday.1x.png",
      },
      "text": "10:00 Uhr Ökumenischer Gottesdienst auf der Bühne vor dem Rathaus.
11:00 bis 18:00 Uhr Festmeile
11:00 bis 19:00 Uhr Bühnenprogramm
15:30 Uhr Beginn des Trachten- und Festumzugs",
      "title": "Programm für Sonntag, 3. September",
      "type": "Standard",
    },
    "directives": Array [
      Object {
        "slotToElicit": "Tag",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Sonntag, 3. September</p><p>10 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Ökumenischer Gottesdienst</p><p>11 bis 18 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Festmeile</p><p>11 bis 19 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Bühnenprogramm</p><p>15:30 Uhr <break time=\\"100ms\\" /> Beginn des Trachten- und Festumzugs</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "PROGRAM",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 4`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-friday.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-friday.1x.png",
      },
      "text": "16:00 bis 20:00 Uhr Festmeile
16:00 bis 24:00 Uhr Bühnenprogramm",
      "title": "Programm für Freitag, 1. September",
      "type": "Standard",
    },
    "directives": Array [
      Object {
        "slotToElicit": "Tag",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Programm für Freitag, 1. September</p><p>Ab 17:30 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Local Heroes Warm Up mit Enemy Jack, Final Impact und Kyonic präsentiert von Radio Okerwelle, Hallenbad – Kultur am Schachtweg und der Musikschule Wolfsburg. (Ort: Bühne 1, Designer Outlets Wolfsburg)</p><p>Ab 18 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Radio38 mit der deutschsprachigen Pop-Band LUPID, die mit ihrem Mix aus modernen elektronischen Klängen und ihrem einzigartigen Sound überzeugt sowie die Jazzkantine, die mit der Kombination aus Jazz, Hip Hop und Rap ein breites Publikum anspricht. (Ort: Bühne 7, Hollerplatz)</p><p>20 bis 21 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Die YouTube-Zwillinge und Teenager-Idole Die Lochis sorgen mit ihren Songs wie \\"Ab geht’s\\" und \\"Lieblingslied\\" für gute Laune. (Ort: Bühne 9, Grünfläche Planetarium)</p><p>20 bis 21:15  <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Marquess präsentiert von NDR 1 Niedersachsen (Ort: Bühne 2, Nordkopf)</p><p>20 bis 21:30 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Antenne Niedersachsen Party mit Stilbruch, akustische Pop/Rockmusik mit klassischen Instrumenten. (Ort: Bühne 6, Rathausplatz)</p><p>Ab 21:30 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Der spanische Popsänger Alvaro Soler bringt mit seinen Songs \\"El mismo sol\\" und \\"Sofia\\" Latin-Beats nach Wolfsburg. (Ort: Bühne 6, Rathausplatz)</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "PROGRAM",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 5`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-saturday.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-program-saturday.1x.png",
      },
      "text": "10:00 bis 20:00 Uhr Festmeile
10:00 bis 24:00 Uhr Bühnenprogramm
11:00 Uhr Offizielle Eröffnungsfeier auf der Bühne vor dem Rathaus.",
      "title": "Programm für Samstag, 2. September",
      "type": "Standard",
    },
    "directives": Array [
      Object {
        "slotToElicit": "Tag",
        "type": "Dialog.ElicitSlot",
      },
    ],
    "outputSpeech": Object {
      "ssml": "<speak><p>Programm für Samstag, 2. September</p><p>10 bis 20 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Festmeile</p><p>10 bis 24 <prosody pitch=\\"-10%\\">Uhr</prosody> <break time=\\"100ms\\" /> Bühnenprogramm</p><p>11:00 Uhr <break time=\\"100ms\\" /> Offizielle Eröffnungsfeier</p><p>Welcher Tag interessiert Dich?</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Freitag</emphasis>, <emphasis>Samstag</emphasis> oder <emphasis>Sonntag</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "PROGRAM",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should handle dialog in and out program 6`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should invoke IntentRequest 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should invoke IntentRequest on new session 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Der Tag der Niedersachsen 2017 findet zum 35. Mal statt. Nach 1983 und 2005 ist Wolfsburg nun zum dritten Mal Ausrichterstadt.</p><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should invoke help intent 1`] = `
Object {
  "response": Object {
    "card": Object {
      "image": Object {
        "largeImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-help.2x.png",
        "smallImageUrl": "https://tdn17.s3-eu-west-1.amazonaws.com/card-help.1x.png",
      },
      "text": "
  Sage \\"Informationen\\" für allgemeine Informationen oder \\"Programm\\" für das Programm.

  Du kannst zum Beispiel das Programm für einen bestimmten Tag aufrufen, indem Du sagst:


  \\"Alexa, frage Tag der Niedersachsen nach dem Programm für Freitag\\"
",
      "title": "Hilfe",
      "type": "Standard",
    },
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak>Rufe Informationen oder das Programm ab, indem Du sagst: <break/> <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
      "type": "SSML",
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;

exports[`Alexa TDN should not exit when canceled from intro 1`] = `
Object {
  "response": Object {
    "directives": Array [],
    "outputSpeech": Object {
      "ssml": "<speak><p>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</p></speak>",
      "type": "SSML",
    },
    "reprompt": Object {
      "outputSpeech": Object {
        "ssml": "<speak>Sage <emphasis>Informationen</emphasis> oder <emphasis>Programm</emphasis>.</speak>",
        "type": "SSML",
      },
    },
    "shouldEndSession": false,
  },
  "sessionAttributes": Object {
    "STATE": "INTRO",
  },
  "version": "1.0",
}
`;
